App/Frontend/src/app/add/add.component.css
/**********************************/
/* @since 01/01/2025              */
/* @author K10s Open Source Team  */
/**********************************/

/* SetUp Grid */
.add-header { grid-area: header; }
.nav { grid-area: nav; }
.add-main { grid-area: main; }
.footer { grid-area: footer; }

.add-body {
    display: grid;
    grid-template-areas:
        'nav header'
        'nav main'
        'footer footer';
    grid-template-columns: 1fr 9fr;
    grid-template-rows: 1fr 10fr 0.5fr;
    gap: 16px;
    padding: 10px;
    height: 95vh;
}
/* SetUp Grid */

.add-header {
    background-color: var(--quaternary);
    color: var(--text);
    border-radius: var(--radius);
    box-shadow: 2px 0 5px var(--shadow);
    width: 100%;
    height: 100%;
    font-weight: bold;
    font-size: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
}


/* Add Main */
.add-main {
    background-color: var(--tertiary);
    color: var(--text);
    border-radius: var(--radius);
    box-shadow: 2px 0 5px var(--shadow);
    width: 100%;
    height: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    gap: 8vh;
}

.textarea-container {
    position: relative;
    width: 100%;
    height: 80%;
    display: flex;
}

textarea {
    width: 100%;
    height: 100%;
    padding: var(--spacing);
    background-color: var(--tertiary);
    color: var(--text);
    border-radius: var(--radius);
    box-shadow: 2px 0 5px var(--shadow);
    overflow: hidden;
}
.clear-button {
    position: absolute;
    top: 10px;
    right: 10px;
    background: var(--secondary);
    color: white;
    border: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    cursor: pointer;
    font-size: 14px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background 0.3s ease;
}

.clear-button:hover {
    background: var(--primary);
}

.add-button {
    width: 10%;
    padding: 12px 15px;
    border: 1px solid var(--secondary);
    border-radius: var(--radius);
    background-color: var(--secondary);
    color: var(--text);
    font-size: 16px;
    font-weight: bold;
    text-align: center;
    transition: background-color 0.3s ease, border-color 0.3s ease;
}

.add-button:hover {
    background-color: var(--primary);
    border-color: var(--primary);
}

/* Add Main */

/* Media Queries */
@media screen and (max-width: 1360px) {
    .add-body {
        grid-template-areas:
            'nav header'
            'nav main'
            'footer footer';
        grid-template-columns: 0.5fr 3fr;
        grid-template-rows: 2fr 9fr 0.5fr;
    }

    .add-header {
        grid-template-areas:
            'header1 header2'
            'header3 header3';
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    }
}

@media screen and (max-width: 1045px) {
    .add-header {
        grid-template-areas:
            'header1'
            'header2'
            'header3';
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr 1fr;
    }
}

@media screen and (max-width: 610px) {
    .add-body {
        grid-template-areas:
            'nav'
            'main'
            'footer';
        grid-template-columns: 1fr;
        grid-template-rows: 2fr 9fr 0.5fr;
    }

    .add-header {
        display: none;
    }

}

